--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+    "item.minecraft.diamond_pickaxe": "Reinforced Pickaxe",
     "item.minecraft.golden_pickaxe": "Uncertain Pickaxe",
     "item.minecraft.iron_axe": "Refined Axe",
     "item.minecraft.iron_pickaxe": "Refined Pickaxe",
