Adding Reinforced Axe and Living Axe

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,5 +1,7 @@
 {
+    "item.minecraft.diamond_axe": "Reinforced Axe",
     "item.minecraft.diamond_pickaxe": "Reinforced Pickaxe",
+    "item.minecraft.golden_axe": "Living Axe",
     "item.minecraft.golden_pickaxe": "Uncertain Pickaxe",
     "item.minecraft.iron_axe": "Refined Axe",
     "item.minecraft.iron_pickaxe": "Refined Pickaxe",
