--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -7,5 +7,9 @@
     "item.minecraft.iron_pickaxe": "Refined Pickaxe",
     "item.minecraft.netherite_axe": "Emberbane",
     "item.minecraft.netherite_pickaxe": "Gleam Harvester",
-    "item.minecraft.netherite_sword": "Petalfall"
+    "item.minecraft.netherite_sword": "Petalfall",
+    "item.minecraft.stone_axe": "Steel Axe",
+    "item.minecraft.stone_pickaxe": "Steel Pickaxe",
+    "item.minecraft.wooden_axe": "Rusty Axe",
+    "item.minecraft.wooden_pickaxe": "Rusty Pickaxe"
 }
