Added linked sword

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,6 +1,7 @@
 {
     "item.minecraft.diamond_axe": "Living Axe",
     "item.minecraft.diamond_pickaxe": "Uncertain Pickaxe",
+    "item.minecraft.diamond_sword": "Classic Sword",
     "item.minecraft.golden_axe": "Rusty Axe",
     "item.minecraft.golden_pickaxe": "Rusty Pickaxe",
     "item.minecraft.iron_axe": "Reinforced Axe",
